Implement code changes to enhance functionality and improve performance

--- a/Tech_Prep/tech_prep.html
+++ b/Tech_Prep/tech_prep.html
@@ -14,6 +14,7 @@
 <h1>Chocolate Fudge</h1>
 <!-- 5. A related image with an alt attribute. -->
 <img src="https://cdn.mos.cms.futurecdn.net/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg.webp" alt="Chocolate fudge" />
+<img src="Tech_Prep/image/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg" alt="Chocolate fudge" width="600" height="400" />
 <!-- 6. An h2 element with the text "Description" under the image. -->
 <h2>This chocolate fudge was created by Kirstie Allsopp and it's so easy to prepare - as you can see in the step-by-step video. It's great as a family treat, or as a present in little clear bags tied with ribbons.</h2>
 <!-- 7. A couple of paragraphs under "Description" that describe the recipe. -->
