--- a/Tech_Prep/tech_prep.html
+++ b/Tech_Prep/tech_prep.html
@@ -1,49 +1,34 @@
-<!-- 1. A DOCTYPE tag. -->
 <!DOCTYPE html>
-
-<!-- 2. An html element with a head and body element as children. -->
-<head>
-
-</head>
-<body>
-
-
-<!-- 3. A title element within the head element with the text "Recipes." -->
-<title>Recipes</title>
-<!-- 4. An h1 element that has the text Chocolate Fudge. -->
-<h1>Chocolate Fudge</h1>
-<!-- 5. A related image with an alt attribute. -->
-<img src="https://cdn.mos.cms.futurecdn.net/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg.webp" alt="Chocolate fudge" />
-<img src="Tech_Prep/image/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg" alt="Chocolate fudge" width="600" height="400" />
-<!-- 6. An h2 element with the text "Description" under the image. -->
-<h2>This chocolate fudge was created by Kirstie Allsopp and it's so easy to prepare - as you can see in the step-by-step video. It's great as a family treat, or as a present in little clear bags tied with ribbons.</h2>
-<!-- 7. A couple of paragraphs under "Description" that describe the recipe. -->
-<p>Each stage is lovely to do because the thick, unctuous, chocolatey mixtures melts into such a tempting and beautiful texture. Once you've made the basic recipe, you can adapt it in any way you'd like. Add in sultanas or chopped cherries, or top the fudge with melted white or dark chocolate, or chopped nuts - see tip for ideas. You can even split the batch into three and make different kinds of fudge so you can gift people a variety. This recipe makes around 60 pieces, so there's plenty for presents (plus some for the chef and any helpers).</p>
-<!-- 8. An h2 element with the text "Ingredients." -->
-<h2>Ingredients</h2>
-<!-- 9. An unordered list with the ingredients needed for the recipe. -->
-<ul>
-  <li>400g (14oz) dark or milk chocolate</li>
-  <li>397g can condensed milk</li>
-  <li>25g (1oz) butter</li>
-  <li>100g (3½oz) icing sugar</li>
-  <li>55g (2oz) roasted chopped nuts (optional)</li>
-</ul>
-<!-- 10. Under the list of ingredients add another heading called "Steps." -->
-<h2>Steps</h2>
-<!-- 11. An ordered list with a couple of steps needed to complete the recipe. -->
-<ol>
-  <li>Chop the chocolate into small chunks and place in a non-stick saucepan with the condensed milk and butter, heat very gently, stirring occasionally until melted and smooth. (Alternatively place these ingredients into a microwave safe bowl and microwave in 10-20 second bursts, stirring frequently until the mixture is silky smooth).</li>
-  <li>Beat the icing sugar into the mixture until combined thoroughly. Press the fudge into a 18cm (7in) square tin, smooth over the top and press the nuts into the surface, if using, or leave plain.</li>
-  <li>Chill in the fridge for 1 hour until set, cut into squares.</li>
-  
-</ol>
-<!-- 12. An h2 element with the text "More Recipes." -->
-<h2>More Recipes</h2>
-<!-- 13. A couple of links to other recipes inside an unordered list which has a couple of list items with anchor elements within. -->
-<ul>
-  <li><a href="https://www.goodto.com/recipes/vanilla-fudge">Vanilla Fudge</a></li>
-  <li><a href="https://www.goodto.com/recipes/easy-chocolate-fudge">Chocolate Fudge</a></li>
-  <li><a href="https://www.goodto.com/recipes/fairtrade-chocolate-coated-caramel-fudge">Caramel Fudge</a></li>
-</ul>
-</body>
+<html>
+    <head>
+        <title>Recipes</title>
+    </head>
+    <body>
+        <h1>Chocolate Fudge</h1>
+        <img src="https://cdn.mos.cms.futurecdn.net/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg.webp" alt="Chocolate fudge" />
+        <img src="Tech_Prep/image/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg" alt="Chocolate fudge" width="600" height="400" />
+        <h2>Description</h2>
+        <p>This chocolate fudge was created by Kirstie Allsopp and it's so easy to prepare - as you can see in the step-by-step video. It's great as a family treat, or as a present in little clear bags tied with ribbons.</p>
+        <p>Each stage is lovely to do because the thick, unctuous, chocolatey mixtures melts into such a tempting and beautiful texture. Once you've made the basic recipe, you can adapt it in any way you'd like. Add in sultanas or chopped cherries, or top the fudge with melted white or dark chocolate, or chopped nuts - see tip for ideas. You can even split the batch into three and make different kinds of fudge so you can gift people a variety. This recipe makes around 60 pieces, so there's plenty for presents (plus some for the chef and any helpers).</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>400g (14oz) dark or milk chocolate</li>
+            <li>397g can condensed milk</li>
+            <li>25g (1oz) butter</li>
+            <li>100g (3½oz) icing sugar</li>
+            <li>55g (2oz) roasted chopped nuts (optional)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Chop the chocolate into small chunks and place in a non-stick saucepan with the condensed milk and butter, heat very gently, stirring occasionally until melted and smooth. (Alternatively place these ingredients into a microwave safe bowl and microwave in 10-20 second bursts, stirring frequently until the mixture is silky smooth).</li>
+            <li>Beat the icing sugar into the mixture until combined thoroughly. Press the fudge into a 18cm (7in) square tin, smooth over the top and press the nuts into the surface, if using, or leave plain.</li>
+            <li>Chill in the fridge for 1 hour until set, cut into squares.</li>
+        </ol>
+        <h2>More Recipes</h2>
+        <ul>
+            <li><a href="https://www.goodto.com/recipes/vanilla-fudge">Vanilla Fudge</a></li>
+            <li><a href="https://www.goodto.com/recipes/easy-chocolate-fudge">Chocolate Fudge</a></li>
+            <li><a href="https://www.goodto.com/recipes/fairtrade-chocolate-coated-caramel-fudge">Caramel Fudge</a></li>
+        </ul>
+    </body>
+</html>
