--- a/Tech_Prep/tech_prep.html
+++ b/Tech_Prep/tech_prep.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="tech_prep.css" type="text/css" />
 <html>
-    <head>
-        <title>Recipes</title>
-    </head>
-    <body>
+<head>
+    <title>Recipes</title>
+</head>
+<body>
+    <div id="div">
         <h1>Chocolate Fudge</h1>
         <img src="https://cdn.mos.cms.futurecdn.net/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg.webp" alt="Chocolate fudge" />
         <img src="Tech_Prep/image/V6Fj7yPi6CR7YyAMv6jiV4-1280-80.jpg" alt="Chocolate fudge" width="600" height="400" />
+
         <h2>Description</h2>
-        <p>This chocolate fudge was created by Kirstie Allsopp and it's so easy to prepare - as you can see in the step-by-step video. It's great as a family treat, or as a present in little clear bags tied with ribbons.</p>
-        <p>Each stage is lovely to do because the thick, unctuous, chocolatey mixtures melts into such a tempting and beautiful texture. Once you've made the basic recipe, you can adapt it in any way you'd like. Add in sultanas or chopped cherries, or top the fudge with melted white or dark chocolate, or chopped nuts - see tip for ideas. You can even split the batch into three and make different kinds of fudge so you can gift people a variety. This recipe makes around 60 pieces, so there's plenty for presents (plus some for the chef and any helpers).</p>
+        <p>
+            This chocolate fudge was created by Kirstie Allsopp and it's so easy to prepare - as you can see in the step-by-step video. It's great as a family treat, or as a present in little clear bags tied with ribbons.
+        </p>
+        <p>
+            Each stage is lovely to do because the thick, unctuous, chocolatey mixtures melts into such a tempting and beautiful texture. Once you've made the basic recipe, you can adapt it in any way you'd like. Add in sultanas or chopped cherries, or top the fudge with melted white or dark chocolate, or chopped nuts - see tip for ideas. You can even split the batch into three and make different kinds of fudge so you can gift people a variety. This recipe makes around 60 pieces, so there's plenty for presents (plus some for the chef and any helpers).
+        </p>
+
         <h2>Ingredients</h2>
         <ul>
             <li>400g (14oz) dark or milk chocolate</li>
@@ -18,17 +26,26 @@
             <li>100g (3½oz) icing sugar</li>
             <li>55g (2oz) roasted chopped nuts (optional)</li>
         </ul>
+
         <h2>Steps</h2>
         <ol>
-            <li>Chop the chocolate into small chunks and place in a non-stick saucepan with the condensed milk and butter, heat very gently, stirring occasionally until melted and smooth. (Alternatively place these ingredients into a microwave safe bowl and microwave in 10-20 second bursts, stirring frequently until the mixture is silky smooth).</li>
-            <li>Beat the icing sugar into the mixture until combined thoroughly. Press the fudge into a 18cm (7in) square tin, smooth over the top and press the nuts into the surface, if using, or leave plain.</li>
-            <li>Chill in the fridge for 1 hour until set, cut into squares.</li>
+            <li>
+                Chop the chocolate into small chunks and place in a non-stick saucepan with the condensed milk and butter, heat very gently, stirring occasionally until melted and smooth. (Alternatively place these ingredients into a microwave safe bowl and microwave in 10-20 second bursts, stirring frequently until the mixture is silky smooth).
+            </li>
+            <li>
+                Beat the icing sugar into the mixture until combined thoroughly. Press the fudge into a 18cm (7in) square tin, smooth over the top and press the nuts into the surface, if using, or leave plain.
+            </li>
+            <li>
+                Chill in the fridge for 1 hour until set, cut into squares.
+            </li>
         </ol>
+
         <h2>More Recipes</h2>
         <ul>
             <li><a href="https://www.goodto.com/recipes/vanilla-fudge">Vanilla Fudge</a></li>
             <li><a href="https://www.goodto.com/recipes/easy-chocolate-fudge">Chocolate Fudge</a></li>
             <li><a href="https://www.goodto.com/recipes/fairtrade-chocolate-coated-caramel-fudge">Caramel Fudge</a></li>
         </ul>
-    </body>
+    </div>
+</body>
 </html>
